--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-employee-directory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Alteredskull.com/github.io/employee-directory.git",
+  "homepage": "https://Alteredskull/github.io/employee-directory-complete.git",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.12.0",
@@ -15,7 +15,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy":"gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
